--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -27,6 +27,7 @@ jobs:
       run: echo Hello, world!
 
     # Runs a set of commands using the runners shell
-    - uses: wei/curl@v1
+    - name: curl
+      uses: enflo/curl-action@master
       with:
-        args: curl --location --request POST 'http://localhost:3000/swagger/diff' --header 'Content-Type: application/json' --data-raw '{"oldSpec": "https://raw.githubusercontent.com/meraki/openapi/master/openapi/0.8.0/spec2.json","newSpec": "https://raw.githubusercontent.com/meraki/openapi/master/openapi/spec2.json"}'
+        curl: --location --request POST 'https://us-central1-focal-rig-261016.cloudfunctions.net/app' --header "Content-Type: application/json" --data-raw '{"oldSpec": "https://raw.githubusercontent.com/meraki/openapi/master/openapi/0.8.0/spec2.json", "newSpec": "https://raw.githubusercontent.com/meraki/openapi/master/openapi/spec2.json"}'
