--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -30,4 +30,4 @@ jobs:
     - name: curl
       uses: enflo/curl-action@master
       with:
-        curl: --location --request POST 'https://us-central1-focal-rig-261016.cloudfunctions.net/app' --header "Content-Type: application/json" --data-raw '{"oldSpec": "https://raw.githubusercontent.com/meraki/openapi/master/openapi/0.8.0/spec2.json", "newSpec": "https://raw.githubusercontent.com/meraki/openapi/master/openapi/spec2.json"}'
+        curl: --request POST 'https://us-central1-focal-rig-261016.cloudfunctions.net/app/swagger/diff' --header 'Content-Type: application/json' --data-raw '{"oldSpec": "https://raw.githubusercontent.com/meraki/openapi/v0.9.0/openapi/spec2.json","newSpec": "https://raw.githubusercontent.com/meraki/openapi/v1.0.0-beta.0/openapi/spec2.json"}'
