--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -32,3 +32,6 @@ jobs:
         url: https://us-central1-focal-rig-261016.cloudfunctions.net/app/swagger/diff
         method: POST
         payload: '{"oldSpec": "https://raw.githubusercontent.com/meraki/openapi/v0.9.0/openapi/spec2.json","newSpec": "https://raw.githubusercontent.com/meraki/openapi/v1.0.0-beta.0/openapi/spec2.json"}'
+        run: |
+          $output = '${{ steps.webhook.outputs.output }}' | ConvertFrom-Json
+          Write-Host "Time from output $($output.time) statusCode $($output.statusCode) data $($output.data)"
