--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -9,29 +9,39 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+    
+jobs:
+  wget:
+    runs-on: ubuntu-latest
+    steps:
+    - name: wget
+      uses: wei/wget@v1
+      with:
+        args: -O changelog.md http://localhost:3000/swagger/diff?markdown
+        
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+# jobs:
+#   # This workflow contains a single job called "build"
+#   build:
+#     # The type of runner that the job will run on
+#     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+#     # Steps represent a sequence of tasks that will be executed as part of the job
+#     steps:
+#     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#     - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
+#     # Runs a single command using the runners shell
+#     - name: Run a one-line script
+#       run: echo Hello, world!
 
-    - name: changelog
-      uses: satak/webrequest-action@master
-      with:
-        url: https://us-central1-focal-rig-261016.cloudfunctions.net/app/swagger/diff
-        method: POST
-        payload: '{"oldSpec": "https://raw.githubusercontent.com/meraki/openapi/v0.9.0/openapi/spec2.json","newSpec": "https://raw.githubusercontent.com/meraki/openapi/v1.0.0-beta.0/openapi/spec2.json"}'
-        run: |
-          $output = '${{ steps.webhook.outputs.output }}' | ConvertFrom-Json
-          Write-Host "Time from output $($output.time) statusCode $($output.statusCode) data $($output.data)"
+#     - name: changelog
+#       uses: satak/webrequest-action@master
+#       with:
+#         url: https://us-central1-focal-rig-261016.cloudfunctions.net/app/swagger/diff
+#         method: POST
+#         payload: '{"oldSpec": "https://raw.githubusercontent.com/meraki/openapi/v0.9.0/openapi/spec2.json","newSpec": "https://raw.githubusercontent.com/meraki/openapi/v1.0.0-beta.0/openapi/spec2.json"}'
+#         run: |
+#           $output = '${{ steps.webhook.outputs.output }}' | ConvertFrom-Json
+#           Write-Host "Time from output $($output.time) statusCode $($output.statusCode) data $($output.data)"
