--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -22,6 +22,8 @@ jobs:
       uses: wei/wget@v1
       with:
         args: -O changelog.md https://8985076f23d7.ngrok.io/swagger/diff?markdown
+      with:
+        args: -O changelog-beta.md https://8985076f23d7.ngrok.io/swagger/diff?markdown&latestBeta
     - name: Commit files # commit the output folder
       run: |
         git config --local user.email "cguynn@gmail.com"
