--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -22,6 +22,10 @@ jobs:
       uses: wei/wget@v1
       with:
         args: -O changelog.md https://8985076f23d7.ngrok.io/swagger/diff?markdown
+    - name: Sleep for 30 seconds
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '5s'
     - name: wget latest Beta markdown
       uses: wei/wget@v1
       with:
