--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -22,14 +22,13 @@ jobs:
       uses: wei/wget@v1
       with:
         args: -O changelog.md "https://8985076f23d7.ngrok.io/swagger/diff?markdown" 
-    - name: Sleep for 30 seconds
-      uses: jakejarvis/wait-action@master
-      with:
-        time: '5s'
+    
     - name: wget latest Beta markdown
-      uses: wei/wget@v1
+      uses: gautemo/fetch-api-data-action@1.0.2
       with:
-        args: -O changelog-beta.md "https://8985076f23d7.ngrok.io/swagger/diff?markdown&latestBeta" 
+        url: 'https://8985076f23d7.ngrok.io/swagger/diff?markdown&latestBeta'
+        file: 'changelog-beta.md'
+      
     - name: Commit files # commit the output folder
       run: |
         git config --local user.email "cguynn@gmail.com"
