--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -24,11 +24,13 @@ jobs:
         args: -O changelog.md "https://8985076f23d7.ngrok.io/swagger/diff?markdown" 
     
     - name: wget latest Beta markdown
-      uses: gautemo/fetch-api-data-action@1.0.2
+      uses: enflo/curl-action@v1.2
       with:
-        url: 'https://8985076f23d7.ngrok.io/swagger/diff?markdown&latestBeta'
-        file: 'changelog-beta.md'
-      
+      # curl arguments
+        curl: --output changelog-beta.md "https://8985076f23d7.ngrok.io/swagger/diff?markdown&latestBeta" 
+ 
+
+    
     - name: Commit files # commit the output folder
       run: |
         git config --local user.email "cguynn@gmail.com"
