--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -18,16 +18,16 @@ jobs:
     
     - name: checkout
       uses: actions/checkout@v2
-    - name: wget latest GA markdown
+    - name: latest GA markdown
       uses: wei/wget@v1
       with:
         args: -O changelog.md "https://8985076f23d7.ngrok.io/swagger/diff?markdown" 
     
-    - name: wget latest Beta markdown
+    - name: latest Beta markdown
       uses: enflo/curl-action@v1.2
       with:
       # curl arguments
-        curl: --output changelog-beta.md "https://8985076f23d7.ngrok.io/swagger/diff?markdown&latestBeta" 
+        curl: --output changelog-beta.md https://8985076f23d7.ngrok.io/swagger/diff?markdown&latestBeta
  
 
     
