--- a/.github/workflows/firstAction.yml
+++ b/.github/workflows/firstAction.yml
@@ -21,7 +21,7 @@ jobs:
     - name: latest GA markdown
       uses: enflo/curl-action@v1.2
       with:
-        args: --output changelog.md https://8985076f23d7.ngrok.io/swagger/diff?markdown 
+        curl: --output changelog.md https://8985076f23d7.ngrok.io/swagger/diff?markdown 
     
     - name: latest Beta markdown
       uses: enflo/curl-action@v1.2
