--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -15,7 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
    
-    
     - name: checkout
       uses: actions/checkout@v2
     - name: latest GA markdown
@@ -40,6 +39,13 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         force: true
+      
+    - name: Gets latest created release info
+      id: latest_release_info
+      uses: jossef/action-latest-release-info@v1.1.0
+    - name: Print latest release info
+      run: echo ${{ steps.latest_release_info }} 
+      
         
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
